# savior-v2

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: build-linux.sh  build-sidecar.sh  build-windows.sh  package-windows-portable.sh
sidecar/: Program.cs  Savior.Sensord.csproj  app.manifest
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  system.rs
src-tauri/src/sensors/: linux_sysfs.rs  mod.rs  windows_lhm.rs
src/components/: ModulePlaceholder.vue  SensorDashboard.vue
src/components/dashboard/: DiskTable.vue  KpiTile.vue  QuickActions.vue  SparklineChart.vue
src/components/layout/: AppSidebar.vue  CommandPalette.vue  StatusBar.vue
src/composables/: useSensors.ts
src/layouts/: AppShell.vue
src/modules/: registry.ts
src/router/: index.ts
src/stores/: sensors.ts  system.ts  ui.ts
src/types/: sensors.ts  system.ts
src/utils/: health.ts  icons.ts
src/views/: AntivirusView.vue  AuditView.vue  DashboardView.vue  DebloatView.vue  HardwareView.vue  LogsView.vue  NetworkView.vue  PowerView.vue  SettingsView.vue  SoftwareView.vue
