[package]
name = "savior"
version = "0.1.0"
description = "Savior — technician hardware monitoring toolkit"
authors = ["you"]
edition = "2021"

[lib]
name = "savior_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
sysinfo = "0.33"
parking_lot = "0.12"
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
